--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -6,3 +6,17 @@
 .form-edit-button {
     display: inline-block;
 }
+
+/*Pagination*/
+.portlet-footer {
+    min-height: 56px;
+}
+
+.pagination {
+    margin: 0;
+}
+
+.portlet-footer .btn-back {
+    float: left;
+}
+/*Pagination*/
